--- a/catkin_ws/src/arena_web_server/templates/userManager.html
+++ b/catkin_ws/src/arena_web_server/templates/userManager.html
@@ -26,17 +26,19 @@
                     <a class="nav-link active" aria-current="page" href="/home">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/recordings">Recordings</a>
+                      <a class="nav-link" aria-current="page" href="/recordings">Recordings</a>
                   </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Administrator
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="/userManager">Users</a></li>
-                        <li><a class="dropdown-item" href="/fileManager">Files</a></li>
-                      </ul>
-                  </li>
+                  {% if admin %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Administrator
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="/userManager">Users</a></li>
+                            <li><a class="dropdown-item" href="/fileManager">Files</a></li>
+                        </ul>
+                    </li>
+                  {% endif %}
                 </ul>
             </div>
             <div class="d-flex w-100 justify-content-end">   
